--- a/app/src/main/res/layout/fragment_ingredient_detail.xml
+++ b/app/src/main/res/layout/fragment_ingredient_detail.xml
@@ -1,56 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp"
-    android:focusableInTouchMode="true">
 
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/layout_name_text_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/ingredient_name_edit"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    <RelativeLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusableInTouchMode="true"
+        android:padding="20dp">
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/layout_name_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/ingredient_name_edit"
+                style="@style/header_name_text_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@color/textBoxBackground"
+                android:gravity="center_horizontal"
+                android:hint="@string/field_name_string"
+                />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <CheckBox
+            android:id="@+id/ingredient_irritant_checkbox"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/header_name_text_style"
-            android:background="@color/textBoxBackground"
-            android:hint="@string/field_name_string"
+            android:layout_below="@+id/layout_name_text_input"
             android:layout_centerHorizontal="true"
-            android:gravity="center_horizontal"
-            />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <CheckBox
-        android:id="@+id/ingredient_irritant_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:text="@string/ingredient_irritant"
-        android:layout_below="@+id/layout_name_text_input"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"/>
+            android:layout_margin="20dp"
+            android:text="@string/ingredient_irritant"
+            android:textColor="@color/black"
+            android:textSize="20sp"/>
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/layout_comment_text_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ingredient_irritant_checkbox">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/ingredient_comment_edit"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/layout_comment_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/default_edit_text_style"
-            android:hint="@string/ingredient_comment"
-            />
+            android:layout_below="@id/ingredient_irritant_checkbox">
 
-    </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/ingredient_comment_edit"
+                style="@style/default_edit_text_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/ingredient_comment"
+                />
 
-</RelativeLayout>
+        </android.support.design.widget.TextInputLayout>
+
+    </RelativeLayout>
+</ScrollView>
