--- a/app/src/main/res/layout/activity_calendar_main.xml
+++ b/app/src/main/res/layout/activity_calendar_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context="com.smithkeegan.mydailyskincare.MainActivity"
+        tools:context=".CalendarActivityMain"
         >
 
             <android.support.design.widget.AppBarLayout
@@ -30,7 +30,7 @@
                     app:popupTheme="@style/AppTheme.PopupOverlay"/>
             </android.support.design.widget.AppBarLayout>
 
-            <include layout="@layout/fragment_main"/>
+            <include layout="@layout/fragment_calendar_main"/>
 
     </android.support.design.widget.CoordinatorLayout>
 
