--- a/app/src/main/res/layout/fragment_calendar_main.xml
+++ b/app/src/main/res/layout/fragment_calendar_main.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.smithkeegan.mydailyskincare.MainActivity"
-    tools:showIn="@layout/activity_main"
+    tools:context=".CalendarActivityMain"
+    tools:showIn="@layout/activity_calendar_main"
     android:layout_margin="10dp">
 
     <CalendarView
