--- a/app/src/main/res/layout/fragment_routine_detail.xml
+++ b/app/src/main/res/layout/fragment_routine_detail.xml
@@ -138,7 +138,8 @@
                 android:id="@+id/routine_layout_comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/routine_layout_product_list">
+                android:layout_below="@id/routine_layout_product_list"
+                android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/routine_comment_edit"
