--- a/app/src/main/res/layout/fragment_item_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_item_list_dialog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
@@ -7,7 +7,10 @@
     <LinearLayout
         android:id="@+id/item_dialog_title_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
 
         <TextView
             android:id="@+id/item_dialog_title"
@@ -16,7 +19,12 @@
             android:textSize="20sp"
             android:textColor="@color/black"
             android:text="@string/item_list_select_ingredients"
-            android:layout_margin="20dp"/>
+            android:layout_gravity="center_vertical"/>
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
         <Button
             android:id="@+id/item_dialog_button_new_item"
@@ -25,14 +33,13 @@
             android:text="@string/item_list_new_string"
             android:backgroundTint="@color/colorPrimary"
             android:textColor="@color/white"
-            android:layout_gravity="center"
+            android:layout_gravity="center_vertical"
             />
     </LinearLayout>
     <ListView
         android:id="@+id/item_dialog_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/item_dialog_title_layout"
+        android:layout_height="150dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/rectangle_border"
@@ -43,13 +50,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/done_string"
-        android:layout_below="@id/item_dialog_list_view"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_gravity="end"
         android:layout_marginBottom="10dp"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:textColor="@color/colorPrimaryDark"
         />
 
-
-</RelativeLayout>
+</LinearLayout>
