--- a/app/src/main/res/layout/activity_diary_entry_main.xml
+++ b/app/src/main/res/layout/activity_diary_entry_main.xml
@@ -1,34 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/diary_entry_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-    <RelativeLayout
-        android:id="@+id/skin_condition_general"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp">
 
-        <TextView
-            android:id="@+id/condition_general_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/general_condition"/>
 
-        <TextView
-            android:id="@+id/condition_general_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/condition_general_title"
-            android:layout_centerHorizontal="true"
-            android:text="@string/excellent"/>
-
-        <SeekBar
-            android:id="@+id/condition_general_slider"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/condition_general_text"/>
-
-    </RelativeLayout>
-
-</ScrollView>
+</RelativeLayout>
