Load diary entry on fragment start.

--- a/app/src/main/res/layout/fragment_diary_entry_main.xml
+++ b/app/src/main/res/layout/fragment_diary_entry_main.xml
@@ -28,7 +28,8 @@
             android:id="@+id/condition_general_slider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/condition_general_text"/>
+            android:layout_below="@id/condition_general_text"
+            />
 
     </RelativeLayout>
 
