Fix error in Diary Entry table creation.

--- a/app/src/main/res/layout/fragment_diary_entry_main.xml
+++ b/app/src/main/res/layout/fragment_diary_entry_main.xml
@@ -33,4 +33,10 @@
 
     </RelativeLayout>
 
+    <Button
+        android:id="@+id/diary_entry_test_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test Button"/>
+
 </LinearLayout>
