--- a/app/src/main/res/layout/activity_diary_entry_main.xml
+++ b/app/src/main/res/layout/activity_diary_entry_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/diary_entry_layout"
+                android:id="@+id/diary_entry_main"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
