Set condition label to correct color based on selection. Fix layout issues. Replace color palette.

--- a/app/src/main/res/layout/fragment_diary_entry_main.xml
+++ b/app/src/main/res/layout/fragment_diary_entry_main.xml
@@ -14,21 +14,30 @@
             android:id="@+id/diary_entry_condition_general_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/general_condition"/>
+            android:text="@string/general_condition"
+            android:layout_marginBottom="5dp"
+            style="@style/diary_entry_slider_label"/>
 
         <TextView
             android:id="@+id/diary_entry_condition_general_text"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/diary_entry_condition_general_title"
-            android:layout_centerHorizontal="true"
-            android:text="@string/excellent"/>
+            android:gravity="center"
+            android:background="@color/veryGood"
+            android:text="@string/excellent"
+            android:padding="7dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            style="@style/diary_entry_slider_label"/>
 
         <com.smithkeegan.mydailyskincare.customClasses.DiaryEntrySeekBar
             android:id="@+id/diary_entry_seek_bar_general_condition"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/diary_entry_condition_general_text"
+            android:paddingTop="7dp"
+            android:paddingBottom="15dp"
             />
 
     </RelativeLayout>
