--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,5 +33,10 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/newText</item>
     </style>
+
+    <style name="diary_entry_slider_label">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
     
 </resources>
