--- a/app/src/main/res/layout/activity_calendar_main.xml
+++ b/app/src/main/res/layout/activity_calendar_main.xml
@@ -38,7 +38,7 @@
         android:id="@+id/drawer"
         android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:paddingTop="24dp"
+        android:paddingTop="?attr/actionBarSize"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:background="#ffffff"/>
